--- a/settings.json
+++ b/settings.json
@@ -6,13 +6,13 @@
 "autoplaymusic": false,
 "autocomposing": false,
 "autorecording": false,
-"BotName":"Doge Bot", 
-"NomorOwner":"916909137213", 
-"NomorOwner2":"+91 690-913-7213", 
-"NamaOwner":"Xeon", 
-"Dana":"6909137213", 
-"Pulsa":"6909137213", 
-"Ovo":"6909137213", 
+"BotName":"PatRick BOT", 
+"NomorOwner":"+6283141445553", 
+"NomorOwner2":"+6283141445553", 
+"NamaOwner":"Fadlic", 
+"Dana":"6283141445553", 
+"Pulsa":"6283141445553", 
+"Ovo":"6283141445553", 
 "ZeksApi":"twBHoFu3AnqfE6f2rwAuirfTVgh",
 "Zerkey":"ZeroYT7",
 "HunterApi":"Ikyy69"
